--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <base href="/">
     <title>PetMansion</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,51 +36,6 @@
   </head>
 
   <body>
-
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>                        
-          </button>
-          <a class="navbar-brand" href="#">PetMansion Logo</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Acerca De</a></li>
-            <li><a href="#">Reservar</a></li>
-            <li><a href="#">Contacto</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-      
-    <div class="container-fluid text-center">    
-      <div class="row content">
-        <div class="col-sm-2 sidenav">
-<!--           <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p> -->
-        </div>
-        <div class="col-sm-8 text-left"> 
-          <my-app>Loading...</my-app>
-        </div>
-        <div class="col-sm-2 sidenav">
-<!--           <div class="well">
-            <p>ADS</p>
-          </div>
-          <div class="well">
-            <p>ADS</p>
-          </div> -->
-        </div>
-      </div>
-    </div>
-
-    <footer class="container-fluid text-center">
-      <p>Pet Mansion &copy; 2016</p>
-    </footer>
+    <my-app>Loading...</my-app>
   </body>
 </html>
