Uploading content + rudimentary one-route wizard for booking requests

--- a/app/app.html
+++ b/app/app.html
@@ -4,29 +4,31 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" routerLink="/">PetMansion Logo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/">Home</a></li>
-        <li routerLinkActive="active"><a routerLink="about">Acerca De</a></li>
+        <li routerLinkActive="active"><a routerLink="about">Nosotros</a></li>
+        <li routerLinkActive="active"><a routerLink="services">Servicios</a></li>
         <li routerLinkActive="active"><a routerLink="booking">Reservar</a></li>
         <li routerLinkActive="active"><a routerLink="contact">Contacto</a></li>
+        <li routerLinkActive="active"><a routerLink="blog">Blog</a></li>
       </ul>
     </div>
   </div>
 </nav>
-  
-<div class="container-fluid text-center">    
+
+<div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
 <!--           <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p> -->
     </div>
-    <div class="col-sm-8 text-left"> 
+    <div class="col-sm-8 text-left">
       <router-outlet></router-outlet>
     </div>
     <div class="col-sm-2 sidenav">
