--- a/app/booking-step1.html
+++ b/app/booking-step1.html
@@ -1,58 +1,67 @@
-<h1>Reserva</h1>
+<form #form="ngForm" (ngSubmit)="onSubmit()">
 
-<form>
+	<div class="row">
+	  <button class="btn btn-primary pull-right" type="submit">Siguiente</button>
+	</div>
+
+	<h1>Reserva</h1>
+
 	<div class="form-group">
 		<label for="checkInDate">Fecha de entrada</label>
-		<input class="form-control" id="checkInDate" name="checkInDate" [(ngModel)]="request.checkInDate" #checkInModel="ngModel" [datepicker]="checkInModel">
+		<input class="form-control" id="checkInDate" name="checkInDate" [(ngModel)]="req.checkInDate" #checkInModel="ngModel" [datepicker]="checkInModel" required>
 	</div>
 	<div class="form-group">
 		<label for="checkOutDate">Fecha de salida</label>
-		<input class="form-control" id="checkOutDate" name="checkOutDate" [(ngModel)]="request.checkOutDate" #checkOutModel="ngModel" [datepicker]="checkOutModel">
+		<input class="form-control" id="checkOutDate" name="checkOutDate" [(ngModel)]="req.checkOutDate" #checkOutModel="ngModel" [datepicker]="checkOutModel" required>
 	</div>
-</form>
 
-<form>
 	<h2>Informaciones de la mascota</h2>
 
 	<div class="row">
 		<div class="col-md-6">
 			<div class="form-group">
 				<label for="petName">Nombre mascota</label>
-				<input class="form-control" id="petName" name="petName" [(ngModel)]="request.petName" name="petName" placeholder="Nombre mascota" [(ngModel)]="request.petName">
+				<input class="form-control" id="petName" name="petName" required [(ngModel)]="req.petName" name="petName" placeholder="Nombre mascota" [(ngModel)]="req.petName" #petName="ngModel">
+				<div class="alert alert-danger" [hidden]="petName.valid || petName.pristine">Requerido.</div>
 			</div>
 
 			<div class="form-group">
 				<label for="race">Raza</label>
-				<input class="form-control" id="race" name="race" [(ngModel)]="request.race" placeholder="Raza">
+				<input class="form-control" id="race" name="race" [(ngModel)]="req.race" placeholder="Raza" #race="ngModel" required>
+				<div class="alert alert-danger" [hidden]="race.valid || race.pristine">Requerido.</div>
 			</div>
 
 			<div class="form-group">
 				<label for="color">Color</label>
-				<input class="form-control" id="color" name="color" [(ngModel)]="request.color" placeholder="Color">
+				<input class="form-control" id="color" name="color" [(ngModel)]="req.color" placeholder="Color" #color="ngModel" required>
+				<div class="alert alert-danger" [hidden]="color.valid || color.pristine">Requerido.</div>
 			</div>
 
 			<div class="form-group">
 				<label for="weight">Peso (lbs)</label>
-				<input type="number" class="form-control" id="weight" name="weight" [(ngModel)]="request.weight" placeholder="Peso">
+				<input type="number" class="form-control" id="weight" name="weight" [(ngModel)]="req.weight" placeholder="Peso" #weight="ngModel" required>
+				<div class="alert alert-danger" [hidden]="weight.valid || weight.pristine">Debe ser numérico.</div>
 			</div>
 		</div>
 		<div class="col-md-6">
 			<div class="form-group">
 				<label for="age">Edad</label>
-				<input type="number" class="form-control" id="age" name="age" [(ngModel)]="request.age" placeholder="Edad">
+				<input type="number" class="form-control" id="age" name="age" [(ngModel)]="req.age" placeholder="Edad" #age="ngModel" required>
+				<div class="alert alert-danger" [hidden]="age.valid || age.pristine">Debe ser numérico.</div>
 			</div>
 
 			<div class="form-group">
 				<label for="gender">Género</label>
-				<select class="form-control" id="gender" name="gender" [(ngModel)]="request.gender" placeholder="Género">
+				<select class="form-control" id="gender" name="gender" [(ngModel)]="req.gender" placeholder="Género" #gender="ngModel" required>
 					<option value="{{ Gender[Gender.Male] }}">Masculino</option>
 					<option value="{{ Gender[Gender.Female] }}">Femenino</option>
 				</select>
+				<div class="alert alert-danger" [hidden]="gender.valid || gender.pristine">Requerido.</div>
 			</div>
 
 			<div class="form-group">
 				<label for="alergies">Alergias</label>
-				<textarea rows="5" class="form-control" id="alergies" name="alergies" [(ngModel)]="request.alergies"></textarea>
+				<textarea rows="5" class="form-control" id="alergies" name="alergies" [(ngModel)]="req.alergies"></textarea>
 			</div>
 		</div>
 	</div>
@@ -60,38 +69,40 @@
 	<div class="form-group">
 		<label for="medicalCondition">Condiciones médicas</label>
     	<p class="help-block">Especificar condición, si tiene alergias, cirugías, entre otros.</p>
-		<textarea rows="3" cols="1" class="form-control" id="medicalCondition" name="medicalCondition" [(ngModel)]="request.medicalCondition" placeholder="Especificar condiciones..."></textarea>
+		<textarea rows="3" cols="1" class="form-control" id="medicalCondition" name="medicalCondition" [(ngModel)]="req.medicalCondition" placeholder="Especificar condiciones..."></textarea>
 	</div>
 
 	<div class="form-group">
 		<label for="medications">Medicamentos</label>
     	<p class="help-block">Especificar medicamentos que toma actualmente, su dosificación y horario.</p>
-		<textarea rows="3" cols="1" class="form-control" id="medications" name="medications" [(ngModel)]="request.medications" placeholder="Especificar condiciones..."></textarea>
+		<textarea rows="3" cols="1" class="form-control" id="medications" name="medications" [(ngModel)]="req.medications" placeholder="Especificar condiciones..."></textarea>
 	</div>
 
 	<div class="form-group">
 		<label for="sleepPlace">Dónde duerme su mascota</label>
-		<input class="form-control" id="sleepPlace" name="sleepPlace" [(ngModel)]="request.sleepPlace" placeholder="Al lado de su cama">
+		<input class="form-control" id="sleepPlace" name="sleepPlace" [(ngModel)]="req.sleepPlace" placeholder="Al lado de su cama">
 	</div>
 
 	<div class="row">
 		<div class="col-sm-6">
 			<div class="form-group">
 				<label for="mealsADay">Comidas al día</label>
-				<input type="number" class="form-control" id="mealsADay" name="mealsADay" [(ngModel)]="request.mealsADay" placeholder="3 veces">
+				<input type="number" class="form-control" id="mealsADay" name="mealsADay" [(ngModel)]="req.mealsADay" placeholder="3 veces"  #mealsADay="ngModel" required>
+				<div class="alert alert-danger" [hidden]="mealsADay.valid || mealsADay.pristine">Debe ser numérico.</div>
 			</div>
 		</div>
 		<div class="col-sm-6">
 			<div class="form-group">
 				<label for="mealTiming">Horarios</label>
-				<input class="form-control" id="mealTiming" name="mealTiming" [(ngModel)]="request.mealTiming" placeholder="Mañana, tarde y noche">
+				<input class="form-control" id="mealTiming" name="mealTiming" [(ngModel)]="req.mealTiming" placeholder="Mañana, tarde y noche" #mealTiming="ngModel" required>
+				<div class="alert alert-danger" [hidden]="mealTiming.valid || mealTiming.pristine">Requerido.</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label for="curiosities">Curiosidades</label>
-		<textarea rows="3" cols="1" class="form-control" id="curiosities" name="curiosities" [(ngModel)]="request.curiosities" placeholder="Es mimado"></textarea>
+		<textarea rows="3" cols="1" class="form-control" id="curiosities" name="curiosities" [(ngModel)]="req.curiosities" placeholder="Es mimado"></textarea>
 	</div>
 
 	<h2>Informaciones de los padres</h2>
@@ -100,47 +111,59 @@
 		<div class="col-md-6">
 			<div class="form-group">
 				<label for="ownerFullName">Nombre y apellido</label>
-				<input class="form-control" id="ownerFullName" name="ownerFullName" [(ngModel)]="request.ownerFullName">
+				<input class="form-control" id="ownerFullName" name="ownerFullName" [(ngModel)]="req.ownerFullName" #ownerFullName="ngModel" required>
+				<div class="alert alert-danger" [hidden]="ownerFullName.valid || ownerFullName.pristine">Requerido.</div>
 			</div>
 			<div class="form-group">
 				<label for="workplace">Lugar de trabajo</label>
-				<input class="form-control" id="workplace" name="workplace" [(ngModel)]="request.workplace">
+				<input class="form-control" id="workplace" name="workplace" [(ngModel)]="req.workplace">
 			</div>
 			<div class="form-group">
 				<label for="mobileNumber">Tel. Móvil</label>
-				<input class="form-control" id="mobileNumber" name="mobileNumber" [(ngModel)]="request.mobileNumber">
+				<input class="form-control" id="mobileNumber" name="mobileNumber" [(ngModel)]="req.mobileNumber" #mobileNumber="ngModel" required pattern="[0-9\-\(\)+]+" minlength="10">
+				<div class="alert alert-danger" [hidden]="mobileNumber.valid || mobileNumber.untouched">Campo requerido y debe tener como mínimo 10 dígitos.</div>
 			</div>
 			<div class="form-group">
 				<label for="email">Correo Electrónico</label>
-				<input class="form-control" id="email" name="email" [(ngModel)]="request.email">
+				<input class="form-control" type="email" id="email" name="email" [(ngModel)]="req.email" #email="ngModel" required>
+				<div class="alert alert-danger" [hidden]="email.valid || email.pristine">Requerido.</div>
 			</div>
 		</div>
 		<div class="col-md-6">
 			<div class="form-group">
 				<label for="nationalId">Cédula</label>
-				<input class="form-control" id="nationalId" name="nationalId" [(ngModel)]="request.nationalId">
+				<input class="form-control" id="nationalId" name="nationalId" [(ngModel)]="req.nationalId" #nationalId="ngModel" required pattern="\d{3}-*\d{7}-*\d{1}">
+				<div class="alert alert-danger" [hidden]="nationalId.valid || nationalId.untouched">Debe tener el formato "###-#######-#" ó "###########".</div>
 			</div>
 			<div class="form-group">
 				<label for="workplacePhoneNumber">Tel. Trabajo</label>
-				<input class="form-control" id="workplacePhoneNumber" name="workplacePhoneNumber" [(ngModel)]="request.workplacePhoneNumber">
+				<input class="form-control" id="workplacePhoneNumber" name="workplacePhoneNumber" [(ngModel)]="req.workplacePhoneNumber" #workplacePhoneNumber="ngModel" pattern="[0-9\-\(\)+]+" minlength="10">
+				<div class="alert alert-danger" [hidden]="workplacePhoneNumber.valid || workplacePhoneNumber.untouched">Debe tener como mínimo 10 dígitos.</div>
 			</div>
 			<div class="form-group">
 				<label for="homePhoneNumber">Tel. Casa</label>
-				<input class="form-control" id="homePhoneNumber" name="homePhoneNumber" [(ngModel)]="request.homePhoneNumber">
+				<input class="form-control" id="homePhoneNumber" name="homePhoneNumber" [(ngModel)]="req.homePhoneNumber" #homePhoneNumber="ngModel" pattern="[0-9\-\(\)+]+" minlength="10">
+				<div class="alert alert-danger" [hidden]="homePhoneNumber.valid || homePhoneNumber.untouched">Debe tener como mínimo 10 dígitos.</div>
 			</div>
 			<div class="form-group">
 				<label for="otherPhoneNumber">Tel. Otro</label>
-				<input class="form-control" id="otherPhoneNumber" name="otherPhoneNumber" [(ngModel)]="request.otherPhoneNumber">
+				<input class="form-control" id="otherPhoneNumber" name="otherPhoneNumber" [(ngModel)]="req.otherPhoneNumber" #otherPhoneNumber="ngModel"  pattern="[0-9\-\(\)+]+" minlength="10">
+				<div class="alert alert-danger" [hidden]="otherPhoneNumber.valid || otherPhoneNumber.untouched">Debe tener como mínimo 10 dígitos.</div>
 			</div>
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="homeAddress">Dirección casa</label>
-		<input class="form-control" id="homeAddress" name="homeAddress" [(ngModel)]="request.homeAddress">
+		<input class="form-control" id="homeAddress" name="homeAddress" [(ngModel)]="req.homeAddress">
 	</div>
 
 	<div class="form-group">
 		<label for="handedArticles">Artículos entregados</label>
-		<textarea rows="3" cols="1" class="form-control" id="handedArticles" name="handedArticles" [(ngModel)]="request.handedArticles" placeholder="Comida con medidor, periódicos, plato para agua y comida, etc..."></textarea>
+		<textarea rows="3" cols="1" class="form-control" id="handedArticles" name="handedArticles" [(ngModel)]="req.handedArticles" placeholder="Comida con medidor, periódicos, plato para agua y comida, etc..."></textarea>
 	</div>
+
+	<div class="row">
+	  <button class="btn btn-primary pull-right" type="submit">Siguiente</button>
+	</div>
+
 </form>
