--- a/index.html
+++ b/index.html
@@ -4,27 +4,26 @@
     <title>PetMansion</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- ************************************************************************************************ -->
     <!-- <link rel="stylesheet" href="styles.css"> -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <!-- JQuery and JQueryUI -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/jqueryui/jquery-ui.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="node_modules/jqueryui/jquery-ui.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css">
+    <script src="node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
-    <!-- cdn for modernizr, if you haven't included it already -->
+    <!-- <link rel="stylesheet" type="text/css" href="node_modules/jqueryui/jquery-ui.min.css"> -->
+    <!-- <script src="node_modules/jqueryui/jquery-ui.min.js"></script> -->
+
+    <!-- ************************************************************************************************ -->
     <script src="http://cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>
-    <!-- polyfiller file to detect and load polyfills -->
     <script src="http://cdn.jsdelivr.net/webshim/1.12.4/polyfiller.js"></script>
     <script>
       webshims.setOptions('waitReady', false);
       webshims.setOptions('forms-ext', {types: 'date'});
       webshims.polyfill('forms forms-ext');
     </script>
-
-    <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
-
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
@@ -34,7 +33,6 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head>
-
   <body>
     <my-app>Loading...</my-app>
   </body>
